--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am a PhD candidate in blabla </p>
+          <p>My name is Lucrezia and I am a PhD candidate in the Norden Lab at the Instituto Gulbenkian de Ciencia. My main research interest is morphogenesis, meaning the discipline that studies how tissues and organs form during development.
+          I am fascinated by the capacity of individual stem cells to decode environmental stimuli coming from neighbouring cells and tissues in order to integrate them with their own genetic program and define their next "differentiation step".
+          My current project focuses on the physical properties of pseudostratified epithelia, having as a model system the development of the retinal neuroepithelium. Over the years, I had the chance to work on many other exciting projects related to cell fate decision and tissue patterning.
+          </p>
         </div>
 
         <div class="row">
@@ -94,28 +97,26 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
+            <h3>Molecular Biologist &amp; BioImage Analyst.</h3>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Lorem ipsum dolor sit amet... but to be honest, I have never liked Cicero.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Current Lab Website:</strong> www.example.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : nomad </li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Current Lab Website:</strong> https://gulbenkian.pt/ciencia/research-groups/cnorden/</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Field:</strong> Stem Cell &amp; Developmental Biologist </li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> MSc, sooner or later Dr</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>PhEmailone:</strong> email@example.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> MSc in Molecular and Cellular Biotechnology - University of Trento</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Currently:</strong> IBB PhD candidate</li>
                 </ul>
               </div>
             </div>
             <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+              Hello World!
             </p>
           </div>
         </div>
