--- a/index.html
+++ b/index.html
@@ -86,9 +86,8 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My name is Lucrezia and I am a PhD candidate in the Norden Lab at the Instituto Gulbenkian de Ciencia. My main research interest is morphogenesis, meaning the discipline that studies how tissues and organs form during development.
-          I am fascinated by the capacity of individual stem cells to decode environmental stimuli coming from neighbouring cells and tissues in order to integrate them with their own genetic program and define their next "differentiation step".
-          My current project focuses on the physical properties of pseudostratified epithelia, having as a model system the development of the retinal neuroepithelium. Over the years, I had the chance to work on many other exciting projects related to cell fate decision and tissue patterning.
+          <p>
+          Hello world!
           </p>
         </div>
 
@@ -104,8 +103,8 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Current Lab Website:</strong> https://gulbenkian.pt/ciencia/research-groups/cnorden/</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Field:</strong> Stem Cell &amp; Developmental Biologist </li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Current Lab Website:</strong> <a href="https://gulbenkian.pt/ciencia/research-groups/cnorden/">NordenLab</a> </li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Field:</strong> Stem Cell &amp; Developmental Biology </li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -116,7 +115,9 @@
               </div>
             </div>
             <p>
-              Hello World!
+              My name is Lucrezia and I am a PhD candidate in the Norden Lab at the Instituto Gulbenkian de Ciencia. My main research interest is morphogenesis, meaning the discipline that studies how tissues and organs form during development.
+              I am fascinated by the capacity of individual stem cells to decode environmental stimuli coming from neighbouring cells and tissues in order to integrate them with their own genetic program and define their next "differentiation step".
+              My current project focuses on the physical properties of pseudostratified epithelia, having as a model system the development of the retinal neuroepithelium. Over the years, I had the chance to work on many other exciting projects related to cell fate decision and tissue patterning.
             </p>
           </div>
         </div>
