--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Molecular Biologist &amp; BioImage Analyst.</h3>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet... but to be honest, I have never liked Cicero.
+              My name is Lucrezia and I am a PhD candidate in the Norden Lab at the Instituto Gulbenkian de Ciencia. My main research interest is morphogenesis, meaning the discipline that studies how tissues and organs form during development.
+              I am fascinated by the capacity of individual stem cells to decode environmental stimuli coming from neighbouring cells and tissues in order to integrate them with their own genetic program and define their next "differentiation step".
+              My current project focuses on the physical properties of pseudostratified epithelia, having as a model system the development of the retinal neuroepithelium. Over the years, I had the chance to work on many other exciting projects related to cell fate decision and tissue patterning.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -115,9 +117,7 @@
               </div>
             </div>
             <p>
-              My name is Lucrezia and I am a PhD candidate in the Norden Lab at the Instituto Gulbenkian de Ciencia. My main research interest is morphogenesis, meaning the discipline that studies how tissues and organs form during development.
-              I am fascinated by the capacity of individual stem cells to decode environmental stimuli coming from neighbouring cells and tissues in order to integrate them with their own genetic program and define their next "differentiation step".
-              My current project focuses on the physical properties of pseudostratified epithelia, having as a model system the development of the retinal neuroepithelium. Over the years, I had the chance to work on many other exciting projects related to cell fate decision and tissue patterning.
+
             </p>
           </div>
         </div>
@@ -187,23 +187,23 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
+              <span class="skill">Confocal Microscopy <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">90%</i></span>
+              <span class="skill">Lightsheet Fluorescence Microscopy <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
+              <span class="skill">Tissue Culture <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -212,23 +212,23 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">80%</i></span>
+              <span class="skill">Python <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">WordPress/CMS <i class="val">90%</i></span>
+              <span class="skill">ImageJ Macro <i class="val">40%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Photoshop <i class="val">55%</i></span>
+              <span class="skill">-- <i class="val">0%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -473,7 +473,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>If you want to discuss about science, just drop me a line on twitter or send me an email!</p>
+          <p>If you want to discuss about science, just drop me a line on twitter or send me an email! </p>
         </div>
 
         <div class="row" data-aos="fade-in">
