--- a/index.html
+++ b/index.html
@@ -57,9 +57,24 @@
       <nav class="nav-menu">
         <ul>
           <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
+          <li>
+            <a href="#about"><i class="bx bx-user"></i> <span>About</span></a>
+          </li>
+
+          <li>
+            <a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a>
+          </li>
+
+          <li>
+            <a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a>
+          </li>
+
+          <li class="nav-item ">
+            <a class="nav-link" href="/publications/">
+              publications
+            </a>
+          </li>
+
           <li><a href="#services"><i class="bx bx-server"></i> Services</a></li>
           <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
 
@@ -483,7 +498,7 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>rua da Quinta Grande 6, 2780-156 Oeiras, Lisbon - PT</p>
               </div>
 
               <div class="email">
@@ -492,7 +507,7 @@
                 <p>lcferme@igc.gulbenkian.pt</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/place/Instituto+Gulbenkian+de+Ci%C3%AAncia+(IGC)/@38.6908674,-9.315723,15z/data=!4m5!3m4!1s0x0:0xa58d2f307c0a2f57!8m2!3d38.6908674!4d-9.315723" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
