--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                 <p>lcferme@igc.gulbenkian.pt</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/place/Instituto+Gulbenkian+de+Ci%C3%AAncia+(IGC)/@38.6908674,-9.315723,15z/data=!4m5!3m4!1s0x0:0xa58d2f307c0a2f57!8m2!3d38.6908674!4d-9.315723" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/place/Instituto+Gulbenkian+de+Ci%C3%AAncia+(IGC)/@38.689279,-9.3118391,16z/data=!4m5!3m4!1s0xd1ec928d2d8dbd9:0xa58d2f307c0a2f57!8m2!3d38.6908673!4d-9.3157223" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
