--- a/index.html
+++ b/index.html
@@ -505,10 +505,9 @@
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
                 <p>lcferme@igc.gulbenkian.pt</p>
-              </div>
 
-              <iframe src="https://www.google.com/maps/place/Instituto+Gulbenkian+de+Ci%C3%AAncia+(IGC)/@38.689279,-9.3118391,16z/data=!4m5!3m4!1s0xd1ec928d2d8dbd9:0xa58d2f307c0a2f57!8m2!3d38.6908673!4d-9.3157223" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
-            </div>
+              <div class="mapouter"><div class="gmap_canvas"><iframe width="947" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=rua%20da%20quinta%20grande%206%20&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:947px;}</style><a href="https://www.embedgooglemap.net">embed google maps into website</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:947px;}</style></div></div>
+
 
           </div>
 
