Changes, check if it works

--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
           </li>
 
           <li class="nav-item ">
-            <a class="nav-link" href="/publications/">
-              publications
-            </a>
+            <a class="nav-link" href="/publications/"><i class="bx bx-library"></i>publications</a>
           </li>
 
           <li><a href="#services"><i class="bx bx-server"></i> Services</a></li>
@@ -89,7 +87,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Lucrezia Ferme</h1>
-      <p>I'm <span class="typed" data-typed-items="a Biologist, into BioImage Analysis, a proud Spaghetti eater "></span></p>
+      <p>I'm <span class="typed" data-typed-items="a Molecular Biologist, a BioImage Analyst, a DevBio enthisiast, a Spaghetti lover "></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -111,7 +109,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Molecular Biologist &amp; BioImage Analyst.</h3>
+            <h3>Stem Cell &amp; Developmental Biologist</h3>
             <p class="font-italic">
               My name is Lucrezia and I am a PhD candidate in the Norden Lab at the Instituto Gulbenkian de Ciencia. My main research interest is morphogenesis, meaning the discipline that studies how tissues and organs form during development.
               I am fascinated by the capacity of individual stem cells to decode environmental stimuli coming from neighbouring cells and tissues in order to integrate them with their own genetic program and define their next "differentiation step".
@@ -120,14 +118,16 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Current Lab Website:</strong> <a href="https://gulbenkian.pt/ciencia/research-groups/cnorden/">NordenLab</a> </li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Field:</strong> Stem Cell &amp; Developmental Biology </li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Current Lab:</strong> <a href="https://gulbenkian.pt/ciencia/research-groups/cnorden/">NordenLab</a> </li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Current Model system:</strong> Zebrafish &amp; Human Organoids </li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Currently:</strong> IBB PhD candidate</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> MSc in Molecular and Cellular Biotechnology - University of Trento</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Currently:</strong> IBB PhD candidate</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Before:</strong> MSc in Molecular and Cellular Biotechnology</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Skills in the making:</strong> Microscopy, BioImage Analysis &amp; Scientific Programming </li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Future:</strong> maybe you know! </li>
                 </ul>
               </div>
             </div>
@@ -154,32 +154,32 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
               <i class="icofont-simple-smile"></i>
-              <span data-toggle="counter-up">232</span>
-              <p><strong>Happy Clients</strong> consequuntur quae</p>
+              <span data-toggle="counter-up">4</span>
+              <p><strong>Labs I have worked with</strong> Milan - Vienna - Lisbon</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
               <i class="icofont-document-folder"></i>
-              <span data-toggle="counter-up">521</span>
-              <p><strong>Projects</strong> adipisci atque cum quia aut</p>
+              <span data-toggle="counter-up">4</span>
+              <p><strong>Countries </strong> I have lived in</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
               <i class="icofont-live-support"></i>
-              <span data-toggle="counter-up">1,463</span>
-              <p><strong>Hours Of Support</strong> aut commodi quaerat</p>
+              <span data-toggle="counter-up">4</span>
+              <p><strong>Languages </strong> I speak: Italian, English, French, Portuguese and soon German</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="count-box">
-              <i class="icofont-users-alt-5"></i>
-              <span data-toggle="counter-up">15</span>
-              <p><strong>Hard Workers</strong> rerum asperiores dolor</p>
+              <i class="icofont-money"></i>
+              <span data-toggle="counter-up">2</span>
+              <p><strong>Fellowships</strong> I was awarded with</p>
             </div>
           </div>
 
@@ -202,14 +202,14 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">Confocal Microscopy <i class="val">100%</i></span>
+              <span class="skill">Fluorescence Microscopy <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Lightsheet Fluorescence Microscopy <i class="val">50%</i></span>
+              <span class="skill">Lightsheet Fluorescence Microscopy <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -227,7 +227,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">Python <i class="val">80%</i></span>
+              <span class="skill">Python<i class="bx bx-python"></i> <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -241,7 +241,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">-- <i class="val">0%</i></span>
+              <span class="skill">HTML <i class="val">20%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -493,7 +493,7 @@
 
         <div class="row" data-aos="fade-in">
 
-          <div class="col-lg-5 d-flex align-items-stretch">
+          <div class="col-lg-5 d-flex align-items-stretch">Width 100%
             <div class="info">
               <div class="address">
                 <i class="icofont-google-map"></i>
@@ -506,7 +506,7 @@
                 <h4>Email:</h4>
                 <p>lcferme@igc.gulbenkian.pt</p>
 
-              <div class="mapouter"><div class="gmap_canvas"><iframe width="947" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=rua%20da%20quinta%20grande%206%20&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:947px;}</style><a href="https://www.embedgooglemap.net">embed google maps into website</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:947px;}</style></div></div>
+              <div class="mapouter"><div class="gmap_canvas"><iframe width="980" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=rua%20da%20quinta%20grande%206%20&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:947px;}</style><a href="https://www.embedgooglemap.net">embed google maps into website</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:947px;}</style></div></div>
 
 
           </div>
