--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Current Lab:</strong> <a href="https://gulbenkian.pt/ciencia/research-groups/cnorden/">NordenLab</a> </li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Current Model system:</strong> Zebrafish &amp; Human Organoids </li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Currently:</strong> IBB PhD candidate</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Current Model Organisms:</strong> Zebrafish &amp; Human Organoids </li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Currently I am:</strong> IBB PhD candidate</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Before:</strong> MSc in Molecular and Cellular Biotechnology</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Skills in the making:</strong> Microscopy, BioImage Analysis &amp; Scientific Programming </li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Other Model Organisms:</strong> Mouse, Chick embryo &amp; Embryonic Stem Cells</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Skills:</strong> Mol biology, Microscopy, BioImage Analysis &amp; Scientific Programming </li>
                   <li><i class="icofont-rounded-right"></i> <strong>Future:</strong> maybe you know! </li>
                 </ul>
               </div>
@@ -146,22 +146,23 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Some numbers...</p>
         </div>
 
         <div class="row no-gutters">
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
-              <i class="icofont-simple-smile"></i>
+              <i class="icofont-beaker"></i>
               <span data-toggle="counter-up">4</span>
-              <p><strong>Labs I have worked with</strong> Milan - Vienna - Lisbon</p>
+              <p><strong>Labs </strong> I have worked with:
+                Milan - Vienna - Lisbon</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
-              <i class="icofont-document-folder"></i>
+              <i class="icofont-airplane-alt"></i>
               <span data-toggle="counter-up">4</span>
               <p><strong>Countries </strong> I have lived in</p>
             </div>
@@ -169,9 +170,9 @@
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
-              <i class="icofont-live-support"></i>
-              <span data-toggle="counter-up">4</span>
-              <p><strong>Languages </strong> I speak: Italian, English, French, Portuguese and soon German</p>
+              <i class="icofont-audio"></i>
+              <span data-toggle="counter-up">4/5</span>
+              <p><strong>Languages </strong> Italian, English, French, Portuguese, soon German... </p>
             </div>
           </div>
 
@@ -179,7 +180,7 @@
             <div class="count-box">
               <i class="icofont-money"></i>
               <span data-toggle="counter-up">2</span>
-              <p><strong>Fellowships</strong> I was awarded with</p>
+              <p><strong>Fellowships</strong> VBC Summer School - FCT PhD fellowship</p>
             </div>
           </div>
 
@@ -211,7 +212,7 @@
             <div class="progress">
               <span class="skill">Lightsheet Fluorescence Microscopy <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -227,7 +228,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">Python<i class="bx bx-python"></i> <i class="val">80%</i></span>
+              <span class="skill">Python <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -243,7 +244,7 @@
             <div class="progress">
               <span class="skill">HTML <i class="val">20%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -260,58 +261,61 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p> </p>
         </div>
 
         <div class="row">
-          <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
-            <div class="resume-item pb-0">
-              <h4>Alex Smith</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-              <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
-              </ul>
-            </div>
-
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Integrative Biology &amp; Biomedicine PhD programme </h4>
+              <h5>2019 - present</h5>
+              <p><em>Instituto Gulbenkian de Ciencia, Oeiras - Lisbon, PT</em></p>
+              <p>"Investigating the influence of pseudostratification for neuroepithelial development"
+                PhD project under the supervision of Dr Caren NordenLab
+                Selected through the International Max Planck Research School for Cell, Development and System Biology (call 2019) </p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>MSc in Cellular &amp; Molecular Biotechnology </h4>
+              <h5>2016 - 2018</h5>
+              <p><em>University of Trento, Trento, IT</em></p>
+              <p>"Establishment of a live imaging strategy to study ERK activity in the exit from naive pluripotency"
+                Master Thesis at the Max Perutz Laboratories, Vienna, Austria, under supervision of Dr Christa Buecker</p>
+            </div>
+            <div class="resume-item">
+              <h4>BSc in Medical Biotechnology </h4>
+              <h5>2013 - 2016</h5>
+              <p><em>University of Milan, Milan, IT</em></p>
+              <p> "Characterization of the role of long non-coding RNAs during the differentiation of human CD4 T lymphocytes"
+                BSc Thesis at the INGM, Milan, Italy, under the supervision of Prof. Massimiliano Pagani. </p>
             </div>
           </div>
+
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
+              <h4>PhD candidate</h4>
               <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <p><em>Norden Lab </em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Bla </li>
+                <li>Bla. </li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Scientific Intern</h4>
+              <h5>2019 - 7 months</h5>
+              <p><em>Kicheva Lab</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Work on new project about BMP signalling in the vertebrate neural tube</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Master student</h4>
+              <h5>2018 - 11 months</h5>
+              <p><em>Buecker Lab </em></p>
+              <ul>
+                <li>Bla </li>
+                <li>Bla. </li>
               </ul>
             </div>
           </div>
@@ -493,7 +497,7 @@
 
         <div class="row" data-aos="fade-in">
 
-          <div class="col-lg-5 d-flex align-items-stretch">Width 100%
+          <div class="col-lg-5 d-flex align-items-stretch">
             <div class="info">
               <div class="address">
                 <i class="icofont-google-map"></i>
